Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-99534

tst_qfuture memleaks

XMLWordPrintable

    • Linux/X11
    • 5
    • a8794503eb (qt/qtbase/dev) a8794503eb (qt/tqtc-qtbase/dev) 22cb8d9527 (qt/qtbase/6.3) 22cb8d9527 (qt/tqtc-qtbase/6.3) 6a6c3ac9a5 (qt/qtbase/6.2) 6a6c3ac9a5 (qt/tqtc-qtbase/6.2)
    • Team One Foundation Sprint 49, Team One Foundation Sprint 50

      It seems the new whenAll()/whenAny() functionality causes some memory leaks.

        1. tst_qfuture.log
          4.26 MB
          Marc Mutz
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            sonakur Sona Kurazyan
            mmutz Marc Mutz
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: